--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,10 @@
   "author": "prashantHbtu",
   "license": "ISC",
   "dependencies": {
-    "mongoose": "^7.3.1"
+    "express": "^4.18.2",
+    "mongoose": "^6.10.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
