--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,10 @@
   "author": "prashantHbtu",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-validator": "^6.12.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.1"
   },
   "devDependencies": {
