--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.10.1"
+    "mongoose": "^6.10.1",
+    "nodemailer": "^6.9.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
